syntax = "proto3";

package shared;

option go_package = "github.com/matfire/pockets/shared";

service Pockets {
	rpc GetContainers(GetContainersRequest) returns (ContainerList) {}
}

message GetContainersRequest {}

message ContainerList {
	repeated ContainerObject containers = 1;
}

message ContainerObject {
	string id = 1;
	string status = 2;
	string name = 3;
}
