syntax = "proto3";

package shared.v1;

option go_package = "github.com/matfire/pockets/shared/v1;sharedv1";

service PocketsService {
	rpc GetContainers(GetContainersRequest) returns (GetContainersResponse) {}
	rpc CreateContainer(CreateContainerRequest) returns (CreateContainerResponse) {}
	rpc CheckImage(CheckImageRequest) returns (CheckImageResponse) {}
	rpc CreateImage(CreateImageRequest) returns (CreateImageResponse) {}
}

message GetContainersRequest {}

message GetContainersResponse {
	repeated Container containers = 1;
}

message Container {
	string id = 1;
	string name = 2;
	string status = 3;
}

message CreateContainerRequest {
	string name = 1;
	string version = 2;
}

message CreateContainerResponse {
	Container container = 1;
}

message CheckImageRequest {
	string version = 1;
}

message CheckImageResponse {
	bool exists = 1;
}

message CreateImageRequest {
	string version = 1;
}

message CreateImageResponse {

}
